# Mnist_model_on_genann

./: CMakeLists.txt  Readme.md
src/: train_mnist.c
